# toy-embedding-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  genezio.yaml  pyproject.toml  requirements.txt
app/: main.py
src/: main.py
src/routes/: demo.py
src/services/: keywordEmbedding.py
